// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VimeoVideo /> displays a message on error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "height": 250,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "position": "absolute",
      }
    }
  >
    <Text>
      Oopsie! There was an error loading the video…
    </Text>
  </View>
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "height": 250,
          "width": "100%",
        },
      ]
    }
  >
    <ViewManagerAdapter_ExpoVideoView
      onError={[Function]}
      onFullscreenUpdate={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onReadyForDisplay={[Function]}
      onStatusUpdate={[Function]}
      resizeMode="mock"
      status={{}}
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
      useNativeControls={true}
      videoStyle={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`<VimeoVideo /> loads the video 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "height": 250,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "position": "absolute",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#A6A6A6"
      size="large"
    />
    <Text>
      Loading…
    </Text>
  </View>
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "height": 250,
          "width": "100%",
        },
      ]
    }
  >
    <ViewManagerAdapter_ExpoVideoView
      onError={[Function]}
      onFullscreenUpdate={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onReadyForDisplay={[Function]}
      onStatusUpdate={[Function]}
      resizeMode="mock"
      status={{}}
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
      useNativeControls={true}
      videoStyle={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
